--- a/public/Index.html
+++ b/public/Index.html
@@ -9,6 +9,9 @@
     <a href="/">Home</a>|<a href="/Index.html">Welcome</a>|<a href="/Service.html">Service</a>|<a href="/Aboutus.html">About Us</a><br/>
     <hr/>
     <h1 style="color: orangered;">Jay Shree Ram</h1>
+    <hr/>
+    <img src="./images/hindu.jpg" width="300" height="300"/>
+    <img src="./images/wallpaper.jpg" width="300" height="300"/>
     
 </body>
 </html>
